# zephyr

projects/digital_speedometer/: CMakeLists.txt  prj.conf  xiao_esp32c3.overlay
projects/digital_speedometer/src/: main.c  nmea_parser.c  nmea_parser.h
